--- a/src/Makefile
+++ b/src/Makefile
@@ -2,16 +2,20 @@ sources = \
           dispatcher.c \
           pthreads-demo.c \
           worker.c
+baseline_sources = \
+          baseline.c
 
-headers = pthreads-demo.h
+headers = pthreads-demo.h work.h
 objects = ${sources:.c=.o}
+baseline_objects = ${baseline_sources:.c=.o}
 CFLAGS = -O2 -Wall -Werror
 LDFLAGS = -pthread
 
 binary=pthreads-demo
+baseline_binary=baseline
 
 .PHONY: clean all
-all: $(binary)
+all: $(binary) $(baseline_binary)
 
 
 $(binary): $(objects)
@@ -19,9 +23,14 @@ $(binary): $(objects)
 #	$(CC) -o $@ $? $(LDFLAGS)
 
 
+$(baseline_binary): $(baseline_objects)
+#	The following is applied automatically
+#	$(CC) -o $@ $?
+
+
 .c.o: $(headers)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 
 clean:
-	rm -f $(binary) $(objects)
+	rm -f $(binary) $(baseline_binary) $(objects) $(baseline_objects)
